--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dataloader": "^1.4.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.3",
+    "graphql-fields": "^2.0.3",
     "graphql-tools": "^4.0.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
